--- a/app/src/main/res/layout/activity_values.xml
+++ b/app/src/main/res/layout/activity_values.xml
@@ -20,7 +20,7 @@
         android:text="@string/accelerator_x" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/showx"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -31,7 +31,7 @@
         android:text="@string/accelerator_y" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/showy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -42,7 +42,7 @@
         android:text="@string/accelerator_z" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/showz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
